Some progress porting partials for home page [WIP]

--- a/themes/miller-jensen/layouts/_default/baseof.html
+++ b/themes/miller-jensen/layouts/_default/baseof.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
-    {{- partial "head.html" . -}}
+<html lang="{{ .Site.LanguageCode }}">
+    <head>
+        {{- partial "head.html" . -}}
+    </head>
     <body>
         {{- partial "header.html" . -}}
-        <div id="content">
+        <main>
         {{- block "main" . }}{{- end }}
-        </div>
+        </main>
         {{- partial "footer.html" . -}}
     </body>
 </html>
