WIP. Add people, nix bootstrap cruft

--- a/themes/miller-jensen/layouts/partials/about-row.html
+++ b/themes/miller-jensen/layouts/partials/about-row.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-md-6">
+<div>
+  <div>
     <h3>About Prof. Miller&ndash;Jensen</h3>
     <p>
       <img id="kmj" class="box-rotate-10 small-shadow hidden-xs" height="317"
@@ -39,7 +39,7 @@
     </ul>
 
   </div>
-  <div class="col-md-6">
+  <div>
     <h3>Lab News</h3>
     todo add news
     <p>
