--- a/themes/miller-jensen/layouts/partials/header.html
+++ b/themes/miller-jensen/layouts/partials/header.html
@@ -1,21 +1,24 @@
 <header id="header-row">
-  <div class="container">
     <div class="row">
-      <div class="col-md-6" id="lab-name">
         <a href="/">
           <h1><em>Miller<span class="dash">&ndash;</span>Jensen</em> Laboratory</h1>
           <h2>at Yale Biomedical Engineering</h2>
         </a>
-      </div>
     </div>
-    <div class="row">
-      <div class="col-md-6 col-md-offset-6">
-        <ul class="nav nav-tabs">
-            <li>
+    <div>
+        <ul class="nav">
+            <li {{ if .IsHome }}class="active"{{ end }}>
                 <a href="/">Home</a>
             </li>
+            <li>
+                <a href="/people/">People</a>
+            </li>
+            <li>
+                <a href="/publications/">Publications</a>
+            </li>
+            <li>
+                <a href="/news/">News</a>
+            </li>
         </ul>
-      </div>
     </div>
-  </div>
 </header>
