--- a/themes/miller-jensen/layouts/partials/picture-row.html
+++ b/themes/miller-jensen/layouts/partials/picture-row.html
@@ -1,5 +1,5 @@
-<div class="row" id="banner">
-  <div class="col-md-6" id="tagline">
+<div id="banner">
+  <div id="tagline">
     <p id="westudy">
       We study how
       <em>cell signaling pathways</em> and
@@ -13,7 +13,7 @@
       <em>computer science</em>.
     </p>
   </div>
-  <div class="col-md-6" id="main-image-holder">
+  <div id="main-image-holder">
     <script>
         const pictures = [
                     {
@@ -43,7 +43,6 @@
         newImg.setAttribute('alt', picture.alt);
         newImg.setAttribute('src', '/img/' + picture.src );
         document.getElementById("main-image-holder").appendChild(newImg);
-
     </script>
   </div>
 </div>
