--- a/themes/miller-jensen/layouts/partials/abstract-row.html
+++ b/themes/miller-jensen/layouts/partials/abstract-row.html
@@ -1,5 +1,4 @@
-<div class="row">
-  <div class="col-md-12">
+<div>
     <p>
       <span class="firstLetter">
         <span>T</span>
@@ -28,5 +27,4 @@
       expression in T cells. We are studying how targeting cell-to-cell response variability can modulate phenotypic outcomes
       in these contexts.
     </p>
-  </div>
 </div>
