--- a/themes/miller-jensen/layouts/partials/footer.html
+++ b/themes/miller-jensen/layouts/partials/footer.html
@@ -1,5 +1,1 @@
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+<!-- footer -->
