--- a/themes/miller-jensen/assets/sass/default.scss
+++ b/themes/miller-jensen/assets/sass/default.scss
@@ -4,6 +4,8 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 /* Remove default margin */
@@ -18,6 +20,10 @@ blockquote,
 dl,
 dd {
   margin: 0;
+}
+
+ul {
+  padding-left: 1em;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
@@ -72,5 +78,277 @@ select {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
+}
+
+/* style */
+body {
+    background-color: #fff;
+    font-family: 'PT Serif', Georgia, serif;
+    font-size: 18px;
+    color: rgb(68, 68, 68);
+    -webkit-font-smoothing: antialiased;
+    padding-bottom: 72px;
+
+    header, main {
+      justify-content: center;
+    }
+
+    .container {
+      margin: 0 auto;
+      display: grid;
+      padding: 0em 1em;
+    }
+
+    // These are the breakpoints from Bootstrap
+    @media (min-width:850px) {
+      .container {
+        width:80%;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+        padding: 0;
+        max-width: 1170px;
+      }
+      #main-image-holder {
+        display:block;
+      }
+      #tagline {
+        text-align: center;
+        padding: 1em;
+        font-size: 1.5em;
+      }
+    }
+}
+
+p {
+  margin-bottom: 1em;
+}
+
+.firstLetter {
+  display: block;
+  float: left;
+  margin-top: -0.205em;
+  margin-left: -0.56em;
+  margin-right: 0.60em;
+  height: 2.5em;
+  span {
+      font-size: 3.33em;
+      line-height: 1.0em;
+  }
+}
+.firstLetter+span {
+    margin-left: -0.5em;
+}
+
+.remainderletters {
+    font-weight: bold;
+    color: black;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-weight: 300;
+    color: #003880;
+    font-size: 32px;
+    font-family: 'PT Sans Narrow', sans-serif;
+}
+
+#header-row {
+    padding: 20px 0 0px 0;
+    border-top: 3px solid #eee;
+    background-color: #fff;
+    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#364F93), to(#003880));
+    background: -moz-linear-gradient(#364F93, #003880);
+    background: linear-gradient(#364F93, #003880);
+    text-shadow: #001A6E 0px -1px 1px;
+    /* IE crap */
+    zoom: 1;
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr='#364F93', endColorstr='#003880');
+    /* IE6 & IE7 */
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#364F93', endColorstr='#003880')";
+    /* IE8 */
+}
+
+header {
+  line-height: 1;
+  h1,
+  h2 {
+      color: #fff;
+      /*        color:#000;*/
+      /*        color:#fff;*/
+  }
+  h1 {
+      font-size: 1.75em;
+  }
+  h2 {
+      font-size: 1.25em;
+  }
+  h1 em {
+      font-style: normal;
+      font-weight: 800;
+  }
+  h1 span.dash {
+      font-weight: 100;
+      padding: 0.1em;
+  }
+  a, a:hover {
+      text-decoration: none;
+  }
+
+  h2 {
+      font-weight: 100;
+      color: #B3C0DD;
+  }
+
+  div.container > div {
+    display: flex;
+  }
+
+  .nav {
+    display: flex;
+    list-style: none;
+    padding-left: 0em;
+    li {
+      display: inline-block;
+      align-self: flex-end;
+      font-family: 'PT Sans Narrow', sans-serif;
+      border-right: 1px solid transparent;
+      a {
+        display: block;
+        text-shadow: none;
+        border: 1px solid transparent;
+        border-radius: 2px 2px 0 0;
+        color: #428bca;
+        padding: 0.5em;
+        @media (min-width:768px) {
+          padding: 0.5em 1em 0.75em 1em;
+        }
+      }
+      a:hover, a:focus {
+        background-color: #fff;
+      }
+    }
+    li.active {
+      color:#555;
+      a,  a:hover, a:focus {
+        color: #555;
+        background-color: #fff;
+      }
+    }
+  }
+
+  @media (min-width: 400px) {
+  }
+
+}
+
+#lab-name {
+  margin-bottom: 2em;
+}
+
+#lab-description {
+  grid-column: 1 / -1;
+}
+
+#kmj {
+  background-color: #fff;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  float: right;
+  margin: 0 1.5em 1em 2em;
+}
+
+#main-image-holder {
+  padding: 2em;
+  display: none;
+}
+
+p {
+  ul {
+    padding-left: 1em;
+  }
+}
+
+#tagline{
+  padding: 1em 0;
+  font-size: 1.25em;
+  font-family: 'Shadows Into Light', cursive;
+  em {
+      font-style: normal;
+      font-weight: 800;
+      color: #003880;
+  }
+}
+
+img {
+    border: 1px solid #bbb;
+    padding: 8px;
+}
+
+.box-rotate-10 {
+    -moz-transform: rotate(1deg);
+    -o-transform: rotate(1deg);
+    -webkit-transform: rotate(1deg);
+    /*             filter:  progid:DXImageTransform.Microsoft.Matrix(sizingMethod='auto expand',  
+                      M11=0.9998476951563913, M12=-0.01745240643728351, M21=0.01745240643728351, M22=0.9998476951563913); 
+         -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(
+                      M11=0.9998476951563913, M12=-0.01745240643728351, M21=0.01745240643728351, M22=0.9998476951563913, 
+                      sizingMethod='auto expand')"; 
+               zoom: 1;
+*/
+}
+
+.box-rotate-15 {
+    -moz-transform: rotate(1.5deg);
+    -o-transform: rotate(1.5deg);
+    -webkit-transform: rotate(1.5deg);
+    /*             filter:  progid:DXImageTransform.Microsoft.Matrix(sizingMethod='auto expand',  
+                      M11=0.9996573249755573, M12=-0.02617694830787315, M21=0.02617694830787315, M22=0.9996573249755573); 
+         -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(
+                      M11=0.9996573249755573, M12=-0.02617694830787315, M21=0.02617694830787315, M22=0.9996573249755573, 
+                      sizingMethod='auto expand')"; 
+               zoom: 1;
+*/
+}
+
+.box-rotate-07-neg {
+    -moz-transform: rotate(-0.7deg);
+    -o-transform: rotate(-0.7deg);
+    -webkit-transform: rotate(-0.7deg);
+    /*             filter:  progid:DXImageTransform.Microsoft.Matrix(sizingMethod='auto expand',  
+                      M11=0.999925369660452, M12=0.012217000835247169, M21=-0.012217000835247169, M22=0.999925369660452); 
+         -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(
+                      M11=0.999925369660452, M12=0.012217000835247169, M21=-0.012217000835247169, M22=0.999925369660452, 
+                      sizingMethod='auto expand')"; 
+               zoom: 1;
+*/
+}
+
+.box-rotate-07 {
+    -moz-transform: rotate(0.7deg);
+    -o-transform: rotate(0.7deg);
+    -webkit-transform: rotate(0.7deg);
+    /*             filter:  progid:DXImageTransform.Microsoft.Matrix(sizingMethod='auto expand',  
+                      M11=0.999925369660452, M12=-0.012217000835247169, M21=0.012217000835247169, M22=0.999925369660452); 
+         -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(
+                      M11=0.999925369660452, M12=-0.012217000835247169, M21=0.012217000835247169, M22=0.999925369660452, 
+                      sizingMethod='auto expand')"; 
+               zoom: 1;
+*/
+}
+
+.small-shadow {
+    -webkit-box-shadow: 2px 2px 5px #bbb;
+    -moz-box-shadow: 2px 2px 5px #bbb;
+    box-shadow: 2px 2px 5px #bbb;
+}
+
+.large-shadow {
+    -webkit-box-shadow: 5px 5px 10px #bbb;
+    -moz-box-shadow: 5px 5px 10px #bbb;
+    box-shadow: 5px 5px 10px #bbb;
 }
 
