--- a/themes/miller-jensen/layouts/partials/head.html
+++ b/themes/miller-jensen/layouts/partials/head.html
@@ -17,7 +17,7 @@
 </script>
 
 <!-- Bootstrap -->
-<link href='//fonts.googleapis.com/css?family=Gloria+Hallelujah|PT+Sans+Narrow|PT+Serif|Shadows+Into+Light' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=PT+Sans+Narrow|PT+Serif|Shadows+Into+Light' rel='stylesheet' type='text/css'>
 {{ $options := (dict "targetPath" "style.css" "outputStyle" "compressed" "enableSourceMap" true "includePaths" (slice "node_modules/myscss")) }}
 {{ $style := resources.Get "sass/default.scss" | resources.ToCSS $options | fingerprint }}
 <link rel="stylesheet" href="{{ $style.Permalink }}">
