--- a/themes/miller-jensen/assets/sass/default.scss
+++ b/themes/miller-jensen/assets/sass/default.scss
@@ -412,4 +412,37 @@ article {
     width: 97px;
     height: 123px;
   }
+  a:first-of-type {
+    display:block;
+    flex-shrink: 0;
+    position: relative;
+  }
+  div.new-paper,
+  div.preprint-paper {
+      display: none;
+  }
+
+  @media (min-width: 992px) {
+      div.new-paper,
+      div.preprint-paper {
+          display: block;
+          position: absolute;
+          top: 77px;
+          left: -5px;
+          background-color: #EC3D3E;
+          border: 1px solid #E8191D;
+          color: #fff;
+          font-size: 0.7em;
+          font-weight: bold;
+          font-family: sans-serif;
+          text-shadow: #910004 0px -1px 1px;
+          padding: 0.1em 0.3em 0.1em 0.6em;
+          border-radius: 0px 2px 2px 2px;
+      }
+      div.preprint-paper {
+          background-color: #A6DC39;
+          border: 1px solid #89C315;
+          text-shadow: #578401 0px -1px 1px;
+      }
+  }
 }
