--- a/themes/miller-jensen/assets/sass/default.scss
+++ b/themes/miller-jensen/assets/sass/default.scss
@@ -411,7 +411,87 @@ article {
     margin-right: 1.5em;
     width: 97px;
     height: 123px;
+    position: relative;
   }
+
+  img.shadow-a {
+    box-shadow:
+    /* The top layer shadow */
+    0 1px 1px rgba(0,0,0,0.15),
+    /* The second layer */
+    0 10px 0 -5px #eee,
+    /* The second layer shadow */
+    0 10px 1px -4px rgba(0,0,0,0.15),
+     /* The third layer */
+    0 20px 0 -10px #eee,
+    /* The third layer shadow */
+    0 20px 1px -9px rgba(0,0,0,0.15);
+  }
+
+
+  img.shadow-b {
+    box-shadow:
+    /* The top layer shadow */
+    0 1px 1px rgba(0,0,0,0.15),
+    /* The second layer */
+    0 10px 0 -5px #eee,
+    /* The second layer shadow */
+    0 10px 1px -4px rgba(0,0,0,0.15),
+     /* The third layer */
+    0 20px 0 -10px #eee,
+    /* The third layer shadow */
+    0 20px 1px -9px rgba(0,0,0,0.15);
+  }
+
+  img.shadow-c {
+    box-shadow:
+    /* The top layer shadow */
+    0 1px 1px rgba(0,0,0,0.15),
+    /* The second layer */
+    0 10px 0 -5px #eee,
+    /* The second layer shadow */
+    0 10px 1px -4px rgba(0,0,0,0.15),
+     /* The third layer */
+    // 0 20px 0 -10px #eee,
+    /* The third layer shadow */
+    // 0 20px 1px -9px rgba(0,0,0,0.15);
+  }
+  img.shadow-d {
+    box-shadow: 1px 1px 1px #bbb;
+  }
+
+  img.rotate-a {
+    -moz-transform: rotate(1.25deg);
+    -webkit-transform: rotate(1.25deg);
+    -o-transform: rotate(1.25deg);
+    -ms-transform: rotate(1.25deg);
+    transform: rotate(1.25deg);
+  }
+
+  img.rotate-b {
+    -moz-transform: rotate(-1.25deg);
+    -webkit-transform: rotate(-1.25deg);
+    -o-transform: rotate(-1.25deg);
+    -ms-transform: rotate(-1.25deg);
+    transform: rotate(-1.25deg);
+  }
+
+  img.rotate-c {
+    -moz-transform: rotate(0.75deg);
+    -webkit-transform: rotate(0.75deg);
+    -o-transform: rotate(0.75deg);
+    -ms-transform: rotate(0.75deg);
+    transform: rotate(0.75deg);
+  }
+
+  img.rotate-d {
+    -moz-transform: rotate(-0.75deg);
+    -webkit-transform: rotate(-0.75deg);
+    -o-transform: rotate(-0.75deg);
+    -ms-transform: rotate(-0.75deg);
+    transform: rotate(-0.75deg);
+  }
+
   a:first-of-type {
     flex-shrink: 0;
     position: relative;
@@ -426,7 +506,7 @@ article {
       div.preprint-paper {
           display: block;
           position: absolute;
-          top: 77px;
+          top: 65px;
           left: -5px;
           background-color: #EC3D3E;
           border: 1px solid #E8191D;
