--- a/themes/miller-jensen/assets/sass/default.scss
+++ b/themes/miller-jensen/assets/sass/default.scss
@@ -403,7 +403,7 @@ img {
   border-bottom: 1px solid #ddd;
 }
 
-article {
+article.publication {
   display: flex;
   margin-bottom: 1.5em;
   img {
