--- a/themes/miller-jensen/layouts/partials/publication.html
+++ b/themes/miller-jensen/layouts/partials/publication.html
@@ -1,4 +1,4 @@
-<article>
+<article class="publication">
     <a href="https://google.com">
         {{ $s := newScratch }}
         {{ $s.Set "imgsrc" "generic-paper.png" }}
