--- a/themes/miller-jensen/layouts/index.html
+++ b/themes/miller-jensen/layouts/index.html
@@ -1,7 +1,7 @@
 
 {{ define "main" }}
-{{- partial "picture-row.html" -}}
-{{- partial "abstract-row.html" -}}
-{{- partial "about-row.html" -}}
-{{- partial "contact-row.html" -}}
+{{- partial "picture-row.html" . -}}
+{{- partial "abstract-row.html" . -}}
+{{- partial "about-row.html" . -}}
+{{- partial "contact-row.html" . -}}
 {{ end }}
