--- a/themes/miller-jensen/layouts/_default/baseof.html
+++ b/themes/miller-jensen/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
     <body>
         {{- partial "header.html" . -}}
         <main>
-            <div class="container">
+            <div class="container {{lower .CurrentSection.Title}}">
                 {{- block "main" . }}{{- end }}
             </div>
         </main>
