Fix margin on paper thumbnails

--- a/themes/miller-jensen/assets/sass/default.scss
+++ b/themes/miller-jensen/assets/sass/default.scss
@@ -428,6 +428,7 @@ article.publication {
   margin-bottom: 1.5em;
   img {
     float: left;
+    margin-top: 0.5em;
     margin-right: 1.5em;
     width: 97px;
     height: 123px;
