--- a/themes/miller-jensen/layouts/partials/head.html
+++ b/themes/miller-jensen/layouts/partials/head.html
@@ -18,9 +18,9 @@
 
 <!-- Bootstrap -->
 <link href='//fonts.googleapis.com/css?family=PT+Sans+Narrow|PT+Serif|Shadows+Into+Light' rel='stylesheet' type='text/css'>
-{{ $options := (dict "targetPath" "style.css" "outputStyle" "compressed" "enableSourceMap" true "includePaths" (slice "node_modules/myscss")) }}
+{{ $options := (dict "targetPath" "style.css" "outputStyle" "compressed" "enableSourceMap" true )}}
 {{ $style := resources.Get "sass/default.scss" | resources.ToCSS $options | fingerprint }}
-<link rel="stylesheet" href="{{ $style.Permalink }}">
+<link rel="stylesheet" href="{{ $style.RelPermalink }}" media="screen">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
