Make image path relative

--- a/themes/miller-jensen/layouts/partials/picture-row.html
+++ b/themes/miller-jensen/layouts/partials/picture-row.html
@@ -42,7 +42,7 @@
         const newImg = document.createElement("img");
         newImg.className = 'box-rotate-15 large-shadow hidden-xs hidden-sm';
         newImg.setAttribute('alt', picture.alt);
-        newImg.setAttribute('src', '/img/' + picture.src );
+        newImg.setAttribute('src', './img/' + picture.src );
         document.getElementById("main-image-holder").appendChild(newImg);
     </script>
   </div>
