Fix width on headshots

--- a/themes/miller-jensen/layouts/partials/person.html
+++ b/themes/miller-jensen/layouts/partials/person.html
@@ -1,5 +1,5 @@
 <div class="person">
-    <img src="/img/people/{{.Params.Photo}}" width="200px" class="small-shadow">
+    <img src="/img/people/{{.Params.Photo}}" class="small-shadow">
     <h4>{{.Params.Name}}</h4>
     <span class="position">{{.Params.Position}}</span>
     {{.Content}}
