--- a/themes/miller-jensen/layouts/partials/person.html
+++ b/themes/miller-jensen/layouts/partials/person.html
@@ -1,6 +1,6 @@
 <div class="person">
     {{if .Params.Photo}}
-    <img src="/img/people/{{.Params.Photo}}" class="small-shadow">
+    <img src="/img/people/{{.Params.Photo}}" class="small-shadow"  onerror="this.src='/img/people/generic.png'">
     {{end}}
     <h4>{{.Params.Name}}</h4>
     <span class="position">{{.Params.Position}}</span>
