Fall back to generic paper on error

--- a/themes/miller-jensen/layouts/partials/publication.html
+++ b/themes/miller-jensen/layouts/partials/publication.html
@@ -15,7 +15,7 @@
         {{end}}
         {{ $rotate := index ((slice "rotate-a" "rotate-b" "rotate-c" "rotate-d") | shuffle) 0 }}
         {{ $shadow := index ((slice "shadow-a" "shadow-b" "shadow-c" "shadow-d") | shuffle) 0 }}
-        <img src="/img/publications/{{ $s.Get "imgsrc" }}" class="{{$rotate}} {{$shadow}}">
+        <img src="/img/publications/{{ $s.Get "imgsrc" }}" class="{{$rotate}} {{$shadow}}" onerror="this.src='/img/publications/generic-paper.png'">
         {{ if .Params.is_preprint }}
           <div class="preprint-paper small-shadow">
             PREPRINT
